src/objects/FieldMaskingType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to configure the data format for fields to be masked based on field data type.</description>
    <fields>
        <fullName>Masking_Format_10__c</fullName>
        <label>Format 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masking_Format_1__c</fullName>
        <label>Format 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masking_Format_2__c</fullName>
        <label>Format 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FieldMaskingType</label>
</CustomObject>